# live_racing_game

./: .gitignore  README.md  client.py  config_example_map.yaml  main.py  pyproject.toml  server.py  visualizer.py
f1tenth_gym/examples/: waypoint_follow.py
f1tenth_gym/gym/f110_gym/envs/: base_classes.py  f110_env.py  rendering.py
