[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mateusz Lichota", email = "mateusz@lichota.net"},
]
dependencies = [
    "fastapi~=0.70",
    "uvicorn~=0.15",
    "aiocache~=0.11",
    "-e file:///home/mateusz/Desktop/formula_student/f1tenth_gym/gym#egg=f110-gym",
]
requires-python = ">=3.8, <3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
